dh-python (5.20211016.2) UNRELEASED; urgency=medium

  * dh_python3(1): Clarify where the dependencies come from. (closes: 930950)

 -- Stefano Rivera <stefanor@debian.org>  Tue, 19 Oct 2021 17:35:26 -0700

dh-python (5.20211016.1) unstable; urgency=medium

  * Unset DH_INTERNAL_OPTIONS= in the package-building test suites, to fix
    FTBFS on the arch:all buildd.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 16 Oct 2021 13:30:33 -0700

dh-python (5.20211016) unstable; urgency=medium

  [ Piotr Ożarowski ]
  * DEB_BUILD_PROFILES=nocheck will skip test step in pybuild
    (just like DEB_BUILD_OPTIONS=nocheck already does)

  [ Stefano Rivera ]
  * Add support for 2-digit python minor versions (3.10). Parse sonames and
    generate dependencies, correctly. Thanks Graham Inggs.
  * Version Breaks: python to allow dh-python to be co-installed with
    python-is-python2, thanks Stephen Kitt. (closes: 991009)
  * Remove build path from RECORD files, thanks Philip Rinn (closes: 969352)
  * Add integration test coverage for pybuild and flit.
  * flit: Remove direct_url.json from .dist-info, not reproducible and
    doesn't contain any useful information.
  * Re-enable package build-time test suite.
  * Run the python2.7 dh_python2 tests in an autopkgtest.
  * Replaced references to python with python2.7 in the test suite
    (closes: 956191)
  * Update pydist fallback database.
  * Recognise Debian-packaged python modules from .dist-info directories as
    well as .egg-info.
  * Generate python3:Depends from Requires-Dist entries in .dist-info (e.g.
    flit packages). (closes: 987296)
  * Suggest: flit, python3-toml. (closes: 987236)
  * Architecture-qualify py*compile and py*clean calls in maintainer scripts,
    for architecture-specific Python packages. This allows co-installation
    (and even concurrent unpacking) of different architectures of a package.
    (closes: 991146, 770265, 812228)