@@ -6,8 +6,8 @@ Build-Depends: debhelper (>= 7.0.50~), python3-all
 Standards-Version: 3.9.0
 X-Python3-Version: >= 3.1, << 3.9
 
-Package: python3-foo
 Architecture: all
+Package: python3-foo
 Depends: ${python3:Depends}, ${misc:Depends}
 Recommends: ${python3:Recommends}
 Suggests: ${python3:Suggests}
