@@ -1,6 +1,8 @@
 dh-python (5.20211016.2) UNRELEASED; urgency=medium
 
   * dh_python3(1): Clarify where the dependencies come from. (closes: 930950)
+  * Rewrite dhpython/debhelper.py's debian/control parsing to do 2 passes and
+    avoid relying on conventional field order. (closes: 996949)
 
  -- Stefano Rivera <stefanor@debian.org>  Tue, 19 Oct 2021 17:35:26 -0700
 
